--- a/Resources/Prototypes/Entities/Clothing/Hands/base_clothinghands.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/base_clothinghands.yml
@@ -67,7 +67,7 @@
 
 - type: entity
   abstract: true
-  id: BaseGoldRing
+  id: GoldRingBase
   components:
     - type: PhysicalComposition
       materialComposition:
@@ -77,7 +77,7 @@
 
 - type: entity
   abstract: true
-  id: BaseSilverRing
+  id: SilverRingBase
   name: silver ring
   description: Looks slightly less valuable than a gold one.
   components:
