--- a/Resources/Prototypes/Entities/Clothing/Hands/rings.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/rings.yml
@@ -1,5 +1,5 @@
 - type: entity
-  parent: [ RingBase, BaseGoldRing ]
+  parent: [ RingBase, GoldRingBase ]
   id: GoldRing
   name: gold ring
   description: A precious ring.
@@ -10,7 +10,7 @@
         color: "#ffc833"
 
 - type: entity
-  parent: [ RingBase, BaseSilverRing ]
+  parent: [ RingBase, SilverRingBase ]
   id: SilverRing
   name: silver ring
   description: Looks slightly less valuable than a gold one.
@@ -20,7 +20,7 @@
       - state: ring
 
 - type: entity
-  parent: [ RingBase, BaseGoldRing ]
+  parent: [ RingBase, GoldRingBase ]
   id: GoldRingDiamond
   name: gold diamond ring
   description: Made from ethically mined space diamonds.
@@ -35,7 +35,7 @@
     price: 1500
 
 - type: entity
-  parent: [ RingBase, BaseSilverRing ]
+  parent: [ RingBase, SilverRingBase ]
   id: SilverRingDiamond
   name: silver diamond ring
   description: Made from ethically mined space diamonds.
@@ -49,7 +49,7 @@
     price: 1400
 
 - type: entity
-  parent: [ RingBase, BaseGoldRing ]
+  parent: [ RingBase, GoldRingBase ]
   id: GoldRingGem
   name: gold gem ring
   description: Shiny and valuable!
@@ -69,7 +69,7 @@
           gem: Rainbow
 
 - type: entity
-  parent: [ RingBase, BaseSilverRing ]
+  parent: [ RingBase, SilverRingBase ]
   id: SilverRingGem
   name: silver gem ring
   description: Shiny and not quite as valuable!
