--- a/Resources/Prototypes/Nyanotrasen/Entities/Clothing/OuterClothing/misc.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Clothing/OuterClothing/misc.yml
@@ -9,10 +9,10 @@
   - type: Clothing
     sprite: Nyanotrasen/Clothing/Misc/letterman_jacket_blue.rsi
   - type: TemperatureProtection
-    coefficient: 0.4
+    coolingCoefficient: 0.3
 
 - type: entity
-  parent: ClothingOuterStorageBase
+  parent: ClothingOuterCoatLettermanBlue
   id: ClothingOuterCoatLettermanRed
   name: red letterman jacket
   description: It's a red highschool jacket with a big '14' stitched onto the back.
@@ -21,46 +21,6 @@
     sprite: Nyanotrasen/Clothing/Misc/letterman_jacket_red.rsi
   - type: Clothing
     sprite: Nyanotrasen/Clothing/Misc/letterman_jacket_red.rsi
-  - type: TemperatureProtection
-    coefficient: 0.4
-## mnk
-
-- type: entity
-  parent: ClothingOuterStorageBase
-  id: ClothingOuterCoatMNKWhiteHoodie
-  name: MNK white hoodie
-  description: A classic MNK produced white hoodie.
-  components:
-  - type: Sprite
-    sprite: Nyanotrasen/Clothing/Misc/hoodie_white.rsi
-  - type: Clothing
-    sprite: Nyanotrasen/Clothing/Misc/hoodie_white.rsi
-  - type: TemperatureProtection
-    coefficient: 0.4
-- type: entity
-  parent: ClothingOuterStorageBase
-  id: ClothingOuterCoatMNKBlackTopCoat
-  name: MNK black top coat
-  description: A sturdy MNK black top coat.
-  components:
-  - type: Sprite
-    sprite: Nyanotrasen/Clothing/Misc/black_top_coat.rsi
-  - type: Clothing
-    sprite: Nyanotrasen/Clothing/Misc/black_top_coat.rsi
-  - type: TemperatureProtection
-    coefficient: 0.4
-- type: entity
-  parent: ClothingOuterStorageBase
-  id: ClothingOuterCoatMNKBlackJacket
-  name: MNK black jacket
-  description: A light MNK black jacket.
-  components:
-  - type: Sprite
-    sprite: Nyanotrasen/Clothing/Misc/black_jacket.rsi
-  - type: Clothing
-    sprite: Nyanotrasen/Clothing/Misc/black_jacket.rsi
-  - type: TemperatureProtection
-    coefficient: 0.2
 
 - type: entity
   parent: ClothingOuterBase
